--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "JarFiles/opencsv-5.6.jar"
+        "JarFiles/opencsv-5.6.jar",
+        "JarFiles/commons-lang3-3.12.0.jar"
     ]
 }
